fix wrapping und size

--- a/Sakura Ramen Webseite/style.css
+++ b/Sakura Ramen Webseite/style.css
@@ -20,6 +20,7 @@ body {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    margin-top: 20px;
 }
 
 .logo {
@@ -56,7 +57,6 @@ body {
     padding: 8px 19px;
     border-radius: 8px;
     border: solid white;
-    height: 34px;
 }
 .button_tel:hover {
     background-color: #cf0707;
@@ -84,12 +84,14 @@ body {
     color: white;
     margin-bottom: 0;
     margin-top: 98px;
+    text-align: center;
 
 }
 .subtitle {
     font-family:  "Raleway", system-ui;
     font-size: 24px;
     color: white;
+    text-align: center;
 }
 
 .how_to_order {
@@ -260,7 +262,7 @@ footer {
     padding-right: 160px;
 }
 
-.footer-logo img{
+.footer-logo-desktop {
     height: 44px;
 }
 
@@ -272,6 +274,14 @@ footer {
 
 .footer-logo-mobile {
     display:none;
+}
+
+@media (max-width: 1000px) {
+    .nav a {
+        font-size: 16px;
+    }
+
+
 }
 
 @media (max-width: 770px) {
@@ -290,9 +300,6 @@ footer {
 
     .nav a:not(:last-child) {
         display: none;
-    }
-    .nav > .button_tel {
-        display: block;
     }
 
     .navbar {
